packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__basic_types.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

pub struct MyType {
    pub name: felt252,
    pub enabled: bool,
    #[snip12(kind: "string")]
    pub description: ByteArray,
    #[snip12(kind: "shortstring")]
    pub version: felt252,
    pub class_hash: ClassHash,
    pub contract_address: ContractAddress,
    #[snip12(kind: "timestamp")]
    pub timestamp: u128,
    #[snip12(kind: "selector")]
    pub selector: felt252,
    pub u128_member: u128,
    pub i128_member: i128,
}
pub fn __MY_TYPE_encoded_type() {
    println!(
        "\"MyType\"(\"name\":\"felt\",\"enabled\":\"bool\",\"description\":\"string\",\"version\":\"shortstring\",\"class_hash\":\"ClassHash\",\"contract_address\":\"ContractAddress\",\"timestamp\":\"timestamp\",\"selector\":\"selector\",\"u128_member\":\"u128\",\"i128_member\":\"i128\")",
    );
}
pub const MY_TYPE_TYPE_HASH: felt252 =
    0xcf951320a99a69a4295fa68a048efb46fef4b20163adcae37a86e8d133eb5c;



Diagnostics:

None

AuxData:

None
