packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__complex_enum_type.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

pub enum MyEnum {
    #[snip12(kind: "TokenAmount")]
    Variant1: TokenAmount,
    #[snip12(kind: "TokenAmount")]
    Variant2: TokenAmount,
    Variant3: u256,
    #[snip12(kind: "shortstring")]
    Variant4: felt252,
    Variant5: ClassHash,
    Variant6: ContractAddress,
    #[snip12(kind: "timestamp")]
    Variant7: u128,
    #[snip12(kind: "selector")]
    Variant8: felt252,
    Variant9: u128,
    Variant10: i128,
}
pub fn __MY_ENUM_encoded_type() {
    println!(
        "\"MyEnum\"(\"Variant1\"(\"TokenAmount\"),\"Variant2\"(\"TokenAmount\"),\"Variant3\"(\"u256\"),\"Variant4\"(\"shortstring\"),\"Variant5\"(\"ClassHash\"),\"Variant6\"(\"ContractAddress\"),\"Variant7\"(\"timestamp\"),\"Variant8\"(\"selector\"),\"Variant9\"(\"u128\"),\"Variant10\"(\"i128\"))\"TokenAmount\"(\"token_address\":\"ContractAddress\",\"amount\":\"u256\")\"u256\"(\"low\":\"u128\",\"high\":\"u128\")",
    );
}
pub const MY_ENUM_TYPE_HASH: felt252 =
    0x1a348acec53a1af88d5c5e2fb4e54e11d3f74ffd13a0a2fa27f079e6d3aa716;



Diagnostics:

None

AuxData:

None
