packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__duplicate_snip12_enum_name.snap
---
source: src/tests/test_type_hash.rs
assertion_line: 549
expression: result
---
TokenStream:

pub enum MyEnum {
    Value: felt252,
    #[snip12(name: "Value")]
    Other: felt252,
}


Diagnostics:

====
Error: Duplicate SNIP-12 member or variant name: Value.
====

AuxData:

None
