packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__duplicate_snip12_struct_name.snap
---
source: src/tests/test_type_hash.rs
assertion_line: 536
expression: result
---
TokenStream:

pub struct MyType {
    pub value: felt252,
    #[snip12(name: "value")]
    pub other: felt252,
}


Diagnostics:

====
Error: Duplicate SNIP-12 member or variant name: value.
====

AuxData:

None
