packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__empty_input.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

None

Diagnostics:

====
Error: No valid type found in the input.
====

AuxData:

None
